--- a/vue/1.platform.gis/index.html
+++ b/vue/1.platform.gis/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Shit</title>
     <link type="text/css" rel="stylesheet" href="lib/leaflet.css"/>
-    <link type="text/css" rel="stylesheet" href="lib/leaflet.custom.css"/>
+    <link type="text/css" rel="stylesheet" href="css/leaflet.custom.css"/>
     <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
     <script type="application/javascript" src="lib/leaflet.js"></script>
     <script type="application/javascript" src="lib/plugins/leaflet.heat/leaflet.heat.js"></script>
