三方依赖改

--- a/vue/1.platform.gis/index.html
+++ b/vue/1.platform.gis/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Shit</title>
-    <link type="text/css" rel="stylesheet" href="lib/leaflet.css"/>
+    <link type="text/css" rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css"/>
     <link type="text/css" rel="stylesheet" href="css/leaflet.custom.css"/>
-    <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <script type="application/javascript" src="lib/leaflet.js"></script>
-    <script type="application/javascript" src="lib/plugins/leaflet.heat/leaflet.heat.js"></script>
+    <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="application/javascript" src="./node_modules/leaflet/dist/leaflet.js"></script>
+    <script type="application/javascript" src="./node_modules/leaflet.heat/dist/leaflet-heat.js"></script>
     <script type="application/javascript"
-            src="lib/plugins/leaflet.polylineDecorator/leaflet.polylineDecorator.js"></script>
-    <script type="application/javascript" src="lib/plugins/zoomify/leaflet-deepzoom.js"></script>
-    <script type="application/javascript" src="lib/plugins/leaflet-easyPrint/bundle.js"></script>
+            src="./node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
+    <script type="application/javascript" src="./node_modules/leaflet-deepzoom/leaflet-deepzoom.js"></script>
+    <script type="application/javascript" src="./node_modules/leaflet-easyprint/dist/bundle.js"></script>
     <link type="text/css" rel="stylesheet"
-          href="lib/plugins/leaflet.PolylineMeasure/Leaflet.PolylineMeasure.css"/>
+          href="./node_modules/leaflet.polylinemeasure/Leaflet.PolylineMeasure.css"/>
     <script type="application/javascript"
-            src="lib/plugins/leaflet.PolylineMeasure/Leaflet.PolylineMeasure.js"></script>
-    <link type="text/css" rel="stylesheet" href="lib/plugins/leaflet.pm/leaflet.pm.css"/>
-    <script type="application/javascript" src="lib/plugins/leaflet.pm/leaflet.pm.min.js"></script>
-    <script type="application/javascript" src="lib/keyboard.min.js"></script>
+            src="./node_modules/leaflet.polylinemeasure/Leaflet.PolylineMeasure.js"></script>
+    <link type="text/css" rel="stylesheet" href="./node_modules/@skyraptor/leaflet.pm/dist/leaflet.pm.css"/>
+    <script type="application/javascript" src="./node_modules/@skyraptor/leaflet.pm/dist/leaflet.pm.min.js"></script>
+    <script type="application/javascript" src="./node_modules/keyboardjs/dist/keyboard.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/MarvelGis.css"/>
     <script type="application/javascript" src="js/_1_stage/MarvelGisStage.js"></script>
     <script type="application/javascript" src="js/_2_layer/MarvelGisLayer.js"></script>
@@ -46,7 +46,7 @@
                 x: 51.5,
                 y: -0.09,
                 uiType: "ne",
-                uiImgUrl: "lib/images/node1.svg",
+                uiImgUrl: "image/customIcon/node1.svg",
                 uiImgWidth: 32,
                 uiLabel: "marker111111111111111111111111111111111111111111111111111",
                 uiTips: "<b>marker1</b><br>11111",
@@ -58,7 +58,7 @@
                 x: 51.50344816877402,
                 y: -0.09883403778076173,
                 uiType: "ne",
-                uiImgUrl: "lib/images/node1.svg",
+                uiImgUrl: "image/customIcon/node1.svg",
                 uiImgWidth: 32,
                 uiLabel: "marker2",
                 uiTips: "<b>marker2</b><br>11111",
@@ -74,7 +74,7 @@
                 x: 51.49994457056707,
                 y: -0.10597944259643556,
                 uiType: "site",
-                uiImgUrl: "lib/images/nodeGroup1.svg",
+                uiImgUrl: "image/customIcon/nodeGroup1.svg",
                 uiImgWidth: 32,
                 uiLabel: "site1",
                 uiTips: "<b>site1</b><br>11111",
@@ -88,7 +88,7 @@
                     x: 51.49992987708078,
                     y: -0.10618329048156738,
                     uiType: "neInSite",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: "site1_ne1",
                     uiTips: "<b>site1_ne1</b><br>11111",
@@ -99,7 +99,7 @@
                     x: 51.49999332628028,
                     y: -0.10580241680145265,
                     uiType: "neInSite",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: "site1_ne2",
                     uiTips: "<b>site1_ne2</b><br>11111",
@@ -113,7 +113,7 @@
                 x: 51.49894457056707,
                 y: -0.10597944259643556,
                 uiType: "site",
-                uiImgUrl: "lib/images/nodeGroup1.svg",
+                uiImgUrl: "image/customIcon/nodeGroup1.svg",
                 uiImgWidth: 32,
                 uiLabel: "site2",
                 uiTips: "<b>site2</b><br>11111",
@@ -127,7 +127,7 @@
                     x: 51.49892987708078,
                     y: -0.10618329048156738,
                     uiType: "neInSite",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: "site2_ne1",
                     uiTips: "<b>site2_ne1</b><br>11111",
@@ -138,7 +138,7 @@
                     x: 51.49899332628028,
                     y: -0.10580241680145265,
                     uiType: "neInSite",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: "site2_ne2",
                     uiTips: "<b>site2_ne2</b><br>11111",
@@ -304,12 +304,12 @@
                 //draw
                 oGis.Api.draw(oTopoData, oGis);
                 //Marker/circle/polygon
-                oGis.Api.addMarker("marker3", 51.5, -0.07, "lib/images/node1.svg", 32, {
+                oGis.Api.addMarker("marker3", 51.5, -0.07, "image/customIcon/node1.svg", 32, {
                         id: "marker3",
                         x: 51.5,
                         y: -0.08,
                         uiType: "ne",
-                        uiImgUrl: "lib/images/node1.svg",
+                        uiImgUrl: "image/customIcon/node1.svg",
                         uiImgWidth: 32,
                         uiLabel: "marker3",
                         uiTips: "<b>marker3</b><br>111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111",
@@ -363,7 +363,7 @@
             });
             $("#oTest4Marker").click(function () {
                 oGis.Api.delMarker("marker3", oGis);
-                oGis.Api.setImgUrl("marker1", "lib/images/nodeGroup1.svg", 32, oGis);
+                oGis.Api.setImgUrl("marker1", "image/customIcon/nodeGroup1.svg", 32, oGis);
                 oGis.Api.setOpacity4Marker("marker1", 0.5, oGis);
                 oGis.Api.setPos4Marker("marker1", 51.502, -0.09, oGis);
                 oGis.Api.setTips4Marker("marker1", "fuck world!!", oGis);
@@ -398,7 +398,7 @@
                 oGis.Api.setColor4Link("link1", "green", oGis);
             });
             $("#oTest4AttachedIcon").click(function () {
-                oGis.Api.addAttachedIcon4Marker("marker1", "./lib/images/location-01.svg", oGis);
+                oGis.Api.addAttachedIcon4Marker("marker1", "./image/customIcon/location-01.svg", oGis);
                 setTimeout(function () {
                     oGis.Api.delAttachedIcon4Marker("marker1", oGis);
                 }, 2000);
@@ -441,7 +441,7 @@
                     x: 51.5,
                     y: -0.08,
                     uiType: "ne",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: createMarkerId,
                     uiTips: "<b>marker3</b><br>22",
@@ -527,12 +527,12 @@
                 indoorMapUrl: "image/2/dzc_output_files/"
             }, eventOptions2, oGis2);
             oGis2.Api.addMarker("car1", 85.03051981587062, -179.42871093750003,
-                "lib/images/node1.svg", 32, {
+                "image/customIcon/node1.svg", 32, {
                     id: "marker3",
                     x: 85.03051981587062,
                     y: -179.42871093750003,
                     uiType: "ne",
-                    uiImgUrl: "lib/images/node1.svg",
+                    uiImgUrl: "image/customIcon/node1.svg",
                     uiImgWidth: 32,
                     uiLabel: "marker3",
                     uiTips: "<b>car1</b><br>111111",
