--- a/vue/1.platform.topo/index.html
+++ b/vue/1.platform.topo/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Very NB Topo</title>
     <link type="text/css" rel="stylesheet" href="css/MarvelTopo.css"/>
-    <script type="application/javascript" src="lib/konva.min.js"></script>
-    <script type="application/javascript" src="lib/keyboard.min.js"></script>
-    <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
+    <script type="application/javascript" src="./node_modules/konva/konva.min.js"></script>
+    <script type="application/javascript" src="./node_modules/keyboardjs/dist/keyboard.min.js"></script>
+    <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script type="application/javascript" src="js/_1_stage/MarvelTopoResource.js"></script>
     <script type="application/javascript" src="js/_1_stage/MarvelTopoStage.js"></script>
     <script type="application/javascript" src="js/_2_layer/MarvelTopoLayer.js"></script>
