--- a/vue/1.platform.topoarbor/index.html
+++ b/vue/1.platform.topoarbor/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Very NB Topo</title>
-    <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <script type="application/javascript" src="lib/sigma.min.js"></script>
-    <script type="application/javascript" src="lib/plugins/sigma.layout.forceAtlas2.min.js"></script>
-    <script type="application/javascript" src="lib/plugins/sigma.plugins.dragNodes.min.js"></script>
+    <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="application/javascript" src="./node_modules/sigma/build/sigma.min.js"></script>
+    <script type="application/javascript" src="./node_modules/sigma/build/plugins/sigma.layout.forceAtlas2.min.js"></script>
+    <script type="application/javascript" src="./node_modules/sigma/build/plugins/sigma.plugins.dragNodes.min.js"></script>
     <script type="application/javascript" src="js/MarvelSigma.js"></script>
     <script type="application/javascript" src="js/MarvelArbor.js"></script>
     <script type="application/javascript" src="js/MarvelCanvas.js"></script>
