--- a/vue/1.platform.topoex/index.html
+++ b/vue/1.platform.topoex/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MarvelTopoEx</title>
-    <script src="./lib/jquery-3.2.1.min.js" type="application/javascript"></script>
-    <script src="./lib/keyboard.min.js" type="application/javascript"></script>
-    <script src="./lib/string.js" type="application/javascript"></script>
-    <script src="./lib/uiencode.js" type="application/javascript"></script>
-    <script src="./lib/array.js" type="application/javascript"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js" type="application/javascript"></script>
+    <script src="./node_modules/keyboardjs/dist/keyboard.min.js" type="application/javascript"></script>
+    <script src="./utils/string.js" type="application/javascript"></script>
+    <script src="./utils/uiencode.js" type="application/javascript"></script>
+    <script src="./utils/array.js" type="application/javascript"></script>
     <script src="./js/MarvelTopo.js" type="application/javascript"></script>
     <script src="./js/_1_service/MarvelTopoApi.js" type="application/javascript"></script>
     <script src="./js/_1_service/MarvelTopoCallback.js" type="application/javascript"></script>
