--- a/vue/1.platform.devPanel/index.html
+++ b/vue/1.platform.devPanel/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Demo</title>
     <link type="text/css" rel="stylesheet" href="css/MarvelDevPanel.css"/>
-    <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <script type="application/javascript" src="lib/svg.min.js"></script>
+    <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="application/javascript" src="./node_modules/svg.js/dist/svg.min.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_2.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_3.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_3_1.js"></script>
