--- a/vue/1.platform.devPanelEx/index.html
+++ b/vue/1.platform.devPanelEx/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Demo</title>
     <link type="text/css" rel="stylesheet" href="css/MarvelRackPanel.css"/>
-    <script type="application/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <script type="application/javascript" src="lib/svg.min.js"></script>
-    <script type="application/javascript" src="lib/saveSvgAsPng.js"></script>
-    <script type="application/javascript" src="lib/html2canvas.min.js"></script>
+    <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="application/javascript" src="./node_modules/svg.js/dist/svg.min.js"></script>
+    <script type="application/javascript" src="./node_modules/save-svg-as-png/saveSvgAsPng.js"></script>
+    <script type="application/javascript" src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script type="application/javascript" src="js/MarvelRackCabinet.js"></script>
     <script>
         $(document).ready(function () {
