--- a/vue/1.platform.devPanel/index.html
+++ b/vue/1.platform.devPanel/index.html
@@ -5,7 +5,7 @@
     <title>Demo</title>
     <link type="text/css" rel="stylesheet" href="css/MarvelDevPanel.css"/>
     <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="application/javascript" src="./node_modules/svg.js/dist/svg.min.js"></script>
+    <script type="application/javascript" src="./node_modules/@svgdotjs/svg.js/dist/svg.min.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_2.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_3.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_3_1.js"></script>
