--- a/vue/1.platform.devPanelEx/index.html
+++ b/vue/1.platform.devPanelEx/index.html
@@ -5,8 +5,8 @@
     <title>Demo</title>
     <link type="text/css" rel="stylesheet" href="css/MarvelRackPanel.css"/>
     <script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="application/javascript" src="./node_modules/svg.js/dist/svg.min.js"></script>
-    <script type="application/javascript" src="./node_modules/save-svg-as-png/saveSvgAsPng.js"></script>
+    <script type="application/javascript" src="./node_modules/@svgdotjs/svg.js/dist/svg.min.js"></script>
+    <script type="application/javascript" src="./node_modules/save-svg-as-png/lib/saveSvgAsPng.js"></script>
     <script type="application/javascript" src="./node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script type="application/javascript" src="js/MarvelRackCabinet.js"></script>
     <script>
