--- a/vue/1.platform.devPanel/index.html
+++ b/vue/1.platform.devPanel/index.html
@@ -15,6 +15,7 @@
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_7.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_8.js"></script>
     <script type="application/javascript" src="js/plugins/MarvelDevPanel_9.js"></script>
+    <script type="application/javascript" src="js/plugins/MarvelDevPanel_10.js"></script>
     <script type="application/javascript" src="js/MarvelDevPanel.js"></script>
     <script>
         $(document).ready(function () {
